--- a/app/public/style.css
+++ b/app/public/style.css
@@ -1,4 +1,9 @@
+html {
+    height: 100%;
+}
+
 body {
+    height: 100%;
     margin: 0;
     padding: 0;
     color: rgba(255, 255, 255, 0.87);
@@ -6,13 +11,30 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+#root {
+    height: 100%;
+}
+
 #app {
-    width: 100%;
-    height: 100vh;
     overflow: hidden;
+    display:flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+
+}
+
+#buttons {
+    flex: 1.0;
     display: flex;
     justify-content: center;
-    align-items: center;
+    background-color: #028af8;
+}
+
+.game {
+    flex: 0.0;
+    margin-bottom: -4px;
 }
 
 .spritePosition {
@@ -21,17 +43,18 @@ body {
 }
 
 .button {
-    width: 140px;
-    margin: 10px;
-    padding: 10px;
+    width: 341px;
+    height: 100%;
+    margin: 0;
+    padding: 0;
     background-color: #000000;
     color: rgba(255, 255, 255, 0.87);
-    border: 1px solid rgba(255, 255, 255, 0.87);
+    border: 4px solid rgba(255, 255, 255, 0.87);
     cursor: pointer;
     transition: all 0.3s;
 
     &:hover {
-        border: 1px solid #0ec3c9;
+        border: 4px solid #0ec3c9;
         color: #0ec3c9;
     }
 
@@ -42,7 +65,7 @@ body {
     /* Disabled styles */
     &:disabled {
         cursor: not-allowed;
-        border: 1px solid rgba(255, 255, 255, 0.3);
+        border: 4px solid rgba(255, 255, 255, 0.3);
         color: rgba(255, 255, 255, 0.3);
     }
 }
