--- a/app/public/style.css
+++ b/app/public/style.css
@@ -1,3 +1,5 @@
+/*Game styles */
+
 html {
     height: 100%;
 }
@@ -29,7 +31,13 @@ body {
     flex: 1.0;
     display: flex;
     justify-content: center;
-    background-color: #028af8;
+    background-color: #000000;
+}
+
+.pausebutton {
+    position:absolute;
+    left:95%;
+    top:5%
 }
 
 .game {
@@ -68,4 +76,25 @@ body {
         border: 4px solid rgba(255, 255, 255, 0.3);
         color: rgba(255, 255, 255, 0.3);
     }
+}
+
+/*Menu styles */
+
+.menu {
+    position:relative;
+    top: 50%;
+    left: 50%;
+    height: 500px;
+    width: 500px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    transform: translate(-50%, -50%);
+}
+
+.menubutton {
+    height: 80%;
+    width: 500px;
+    margin: 0;
+    padding: 0;
 }
