--- a/app/public/style.css
+++ b/app/public/style.css
@@ -81,7 +81,7 @@ body {
 /*Menu styles */
 
 .menu {
-    position:relative;
+    position:absolute;
     top: 50%;
     left: 50%;
     height: 500px;
@@ -97,4 +97,18 @@ body {
     width: 500px;
     margin: 0;
     padding: 0;
+}
+
+.menulogo {
+    position:absolute;
+    top: 5%;
+    left: 5%;
+    transform: translate(-50%, -50%);
+}
+
+.menulogin {
+    position:absolute;
+    top: 5%;
+    left: 95%;
+    transform: translate(-50%, -50%);
 }
