--- a/public/style.css
+++ b/public/style.css
@@ -17,19 +17,11 @@ body {
     height: 100%;
 }
 
-#app {
-    overflow: hidden;
-    display:flex;
-    flex-direction: column;
+#buttons {
+    display: flex;
+    flex-direction: row;
     height: 100%;
     width: 100%;
-    justify-content: center;
-
-}
-
-#buttons {
-    flex: 1.0;
-    display: flex;
     justify-content: center;
     background-color: #000000;
 }
@@ -52,7 +44,7 @@ body {
 
 .button {
     width: 341px;
-    height: 100%;
+    height: 100px;
     margin: 0;
     padding: 0;
     background-color: #000000;
