--- a/public/style.css
+++ b/public/style.css
@@ -54,9 +54,9 @@ body {
 
     /* Disabled styles */
     &:disabled {
-        cursor: not-allowed;
         border: 4px solid rgba(255, 255, 255, 0.3);
         color: rgba(255, 255, 255, 0.3);
+        pointer-events: none;
     }
 }
 
