--- a/public/style.css
+++ b/public/style.css
@@ -32,6 +32,14 @@ body {
     top:5%
 }
 
+.jokestatus {
+    position:absolute;
+    left:0.5%;
+    top:95%;
+    width: 30px;
+    height: 30px;
+}
+
 .game {
     margin-bottom: -4px;
 }
