--- a/public/style.css
+++ b/public/style.css
@@ -222,3 +222,9 @@ div.howToPlay span {
     width: 1080px; /* you can use % */
     height: auto;
 }
+
+.gameOver {
+    text-align: center;
+    font-family: "Helvetica";
+    padding: 5px;
+}
